--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "glob": "^11.0.0",
     "lru-cache": "^11.0.1",
     "lucide-react": "^0.447.0",
+    "mongodb": "^6.9.0",
     "next": "14.2.14",
     "next-themes": "^0.3.0",
     "react": "^18",
